Add Internationalization to HomeGallery Component

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-gallery-medias/outstanding-gallery-medias.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-gallery-medias/outstanding-gallery-medias.component.html
@@ -1,11 +1,7 @@
 <div class="feature-section__padded gallery" fxLayout="column">
-  <h1
-    fxFlexAlign="center"
-    class="section-name pb-44"
-    [routerLink]="['/section/gallery']"
-  >
-    GALLERY
-  </h1>
+  <div fxFlexAlign="center" [routerLink]="['/section/gallery']">
+    <h1 translate class="section-name pb-44 clickable">GALLERY</h1>
+  </div>
 
   <div class="gallery-grid">
     <div
