Add Internationalization to HomeTopArticles Component

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -4,7 +4,9 @@
     fxLayout="column"
     fxLayoutAlign="space-between start"
   >
-    <h1 fxFlexAlign="center" class="section-name">LO MÁS GRANDE</h1>
+    <div fxFlexAlign="center">
+      <h1 translate class="section-name clickable">OUTSTANDING</h1>
+    </div>
 
     <div
       class="article-container top-article-container"
