Set as !important the font's styles

--- a/apps/havana500-webclient/src/styles.scss
+++ b/apps/havana500-webclient/src/styles.scss
@@ -6,5 +6,5 @@ body {
 }
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', 'Arial', sans-serif !important;
 }
