--- a/apps/havana500-webclient/src/app/core/scss/partials/_typography.scss
+++ b/apps/havana500-webclient/src/app/core/scss/partials/_typography.scss
@@ -2,7 +2,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Roboto', 'Helvetica Neue', 'Arial', sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', 'Arial', sans-serif !important;
   line-height: 1.4 !important;
   letter-spacing: -0.1px !important;
 }
