--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -36,3 +36,15 @@ $tags-container-color: #2AAAE2;
     }
   }
 }
+
+#sencond-most-important-article-summary-container{
+  ant-article-summary {
+    float: left;
+  }
+}
+
+#articles-summary-container {
+  ant-article-summary {
+    float: left;
+  }
+}
