--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -18,7 +18,7 @@ $article-summary-bColor: #ffffff;
   margin-bottom: 0.5rem;
   color: inherit;
   position: relative;
-  height: 100%;
+  height: auto;
 
   &:hover {
     text-decoration: none !important;
