--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -48,3 +48,20 @@ $tags-container-color: #2AAAE2;
     float: left;
   }
 }
+
+#more-articles-btn-container{
+  position: relative;
+  width: 100%;
+  min-width: 100%;
+  margin-top: 1%;
+  margin-bottom: 3%;
+  button {
+    background-color: $tags-container-color;
+    margin-left: 48%;
+    margin-right: 50%;
+  }
+}
+
+.hide-more-btn {
+  display: none;
+}
