--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -1,9 +1,9 @@
 <div fxLayout="column" fxLayoutAlign="start start">
   <div id="secondary-header" class="col-12">
-    <div id="section-name-container" class="col-6">
+    <div id="section-name-container" class="col-12 col-sm-6">
       <h1 class="section-name">{{sectionName}}</h1>
     </div>
-    <div id="tags-outer-container" class="col-6">
+    <div id="tags-outer-container" class="col-12 col-sm-6">
       <h3 id="tags-title">SELECTOR DE ETIQUETAS</h3>
       <!--TODO: translate this-->
       <div style="width: 100%">
