--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -39,6 +39,7 @@
       'main-article-summary-content__positioned': isEntertainmentArticle,
       'experience-article-summary-content': isExperienceArticle
     }"
+    class="summary-outer-container"
   >
     <div
       class="main-article-summary-content"
