--- a/apps/havana500-webclient/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.scss
@@ -10,6 +10,9 @@ body{
 
 .main-content {
   height: 100%;
+  max-width: 98%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .container__overflowed {
