--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -130,6 +130,9 @@ $article-summary-bColor: #ffffff;
   font-size: 2.85em;
   text-transform: uppercase;
   width: 100%;
+  max-height: 125px;
+    overflow: hidden;
+    min-height: 125px;
 
   @include media-breakpoint-down('sm') {
     font-size: 2.25em;
@@ -203,11 +206,16 @@ $article-summary-bColor: #ffffff;
   // min-height: 70vh;
   display: flex;
   flex-direction: row;
+  
 
   .article-summary-img-container {
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
+    width: 40%;
+  }
+  .summary-outer-container{
+    width: 50%;
   }
 }
 
