Implement the footer with all the needed elements

--- a/apps/havana500-webclient/src/app/features/layout/footer/footer.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/footer/footer.component.html
@@ -1,3 +1,18 @@
-<footer fxLayout="row" fxLayoutAlign="center center" class="mat-ant-dark-800-bg footer-content">
-    <div>Aki va muela y eso</div>
+<footer fxLayout="column" fxLayoutAlign="center center" class="mat-ant-dark-800-bg footer-content">
+    <div id="footer-icons-container">
+        <a class="social-icon fb-icon" href="https://facebook.com">
+            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/facebook.png">
+        </a>
+        <a class="social-icon twitter-icon" href="https://twitter.com">
+            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/twitter.png">
+        </a>
+        <a class="social-icon instagram-icon" href="https://instagram.com">
+            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/instagram.png">
+        </a>
+        
+    </div>
+    <div id="footer-text-container">Asamblea Provincial del Poder Popular Dirección de Comunicación Institucional Teléf.: (+53) 7868 2335 <br>
+            Grupo Creativo PRIM! 500habanas@gmail.com Teléf.: (+53) 5 8412973 <br>
+            Todos los derechos reservados. <br>
+            </div>
 </footer>
