--- a/apps/havana500-webclient/src/app/features/layout/footer/footer.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/footer/footer.component.scss
@@ -1,3 +1,20 @@
 .footer-content {
   min-height: 64px;
+  padding: 30px 0;
 }
+
+#footer-text-container{
+  text-align: center;
+}
+#footer-icons-container{
+  margin-right: 50%;
+    margin-left: 50%;
+    width: auto;
+    min-width: 120px;
+
+    img{
+      max-width: 30px;
+      max-height: 30px;
+    }
+}
+
