Improve the styles with the article's header

--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -16,10 +16,13 @@ $article-tag-bColor: #62b0ff;
   #article-title {
     margin-bottom: 20px;
     font-size: 4em;
+    text-align: center;
+
   }
 
   #article-header {
     margin-bottom: 50px;
+    text-transform: uppercase;
   }
 
   #article-body {
