--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -1,9 +1,9 @@
 <article *ngIf="article" id="article-outer-container" class="container">
-  <div id="article-header" class="row">
+  <div id="article-header" class="row col-12">
     <div id="article-main-picture">
       <img src="{{articleMainPicture.relativePath}}" alt="{{articleMainPicture.seoFileName}}">
     </div>
-    <h1 id="article-title" class="col-12">{{article.title}}</h1>
+    <h1 id="article-title" class="col-10">{{article.title}}</h1>
     <div id="article-info" class="col-4">
       <div id="article-reading-time" class="col-12">
         <span id="article-reading-time-title " class="font-weight-700">Reading Time: </span>{{article.readingTime}}
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <section id="article-body" [innerHtml]="article.body"></section>
+  <section id="article-body" [innerHtml]="article.body" class="col-12 col-sm-11"></section>
   
 
 
