--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -18,9 +18,16 @@
   
 
 
-  <mat-chip-list id="article-tags">
+  <!-- <mat-chip-list id="article-tags">
     <mat-chip class="article-tag" *ngFor="let tag of article.tags" (click)="onSelectTag(tag.id)">{{tag.name}}</mat-chip>
-  </mat-chip-list>
+  </mat-chip-list> -->
+
+  <mat-chip-list id="article-tags">
+      <span class="article-tag" *ngFor="let tag of article.tags" (click)="onSelectTag(tag.id)">
+        <img src="assets/images/tag-icon.png"/>
+        {{tag.name}}
+      </span>
+    </mat-chip-list>
 
   <div id="related-articles-outer-container">
     <h2 id="related-articles-header">Related articles</h2>
