--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -52,6 +52,7 @@ $article-tag-bColor: #32A9E1;
 
       #comments-header{
           font-size: 3em;
+          text-align: center;
       }
   }
 }
