--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
@@ -29,11 +29,14 @@
           <button type="submit" class="btn btn-success" 
             id="new-comment-post-btn" (click)="postNewComment(); newCommentForm.reset()" [disabled] = "!newCommentForm.form.valid">Comentar!</button>
       </form>
-  <mat-card class="comment-container" *ngFor="let comment of comments">
+  <mat-card class="comment-container" *ngFor="let comment of commentsToRender">
     <mat-card-content class="comment-body">{{comment.body}}</mat-card-content>
     <mat-card-footer class="comment-details">
       <span class="comment-date">{{comment.createdAtHumanized}}</span>
       <span class="comment-user">{{comment.userName}}</span>
     </mat-card-footer>
   </mat-card>
+  <div id="more-comments-btn-container" [ngClass]="{'hide-more-btn': endOfComments}">
+      <button class="btn" (click)="loadMoreComments()" translate>SEE_MORE</button>
+    </div>
 </div>
