Improve styles of the comments

--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
@@ -3,7 +3,7 @@
     <hav-comment [comment]="comment" class="comment-inner-container row"></hav-comment>    
   </div>
 </div> -->
-<div id="comments-outer-container">
+<div id="comments-outer-container" class="col-sm-8 col-12">
     <form id="new-comment-outer-container" class="row" #newCommentForm="ngForm">
         <div id="new-comment-user-metadata" class="col-12 form-group">
           <label class="col-12" for="new-comment-username">Nombre de usuario: 
