--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.scss
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.scss
@@ -1,8 +1,10 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+@import '../../../core/scss/ant.scss';
+
 
 // START of variables declaration:
 $comments-container-bColor: #ffffff;
-$comment-container-bColor: #E8F5E9;
+$comment-container-bColor: #F4F4F4;
 $more-btn-color: #2AAAE2;
 
 // END of variables declaration:
@@ -12,9 +14,13 @@ $more-btn-color: #2AAAE2;
     background-color: $comments-container-bColor;
     position: relative;
     border-radius: 6px;
-
+    margin-left: 16%;
+    @include media-breakpoint('xs') {
+        margin-left: 0 !important;
+      }
     #new-comment-outer-container{
         margin-bottom: 4rem;
+    background-color: $comment-container-bColor;
     }
     
     .comment-details {
