Add translation to the comment component and implement styles

--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
@@ -4,31 +4,25 @@
   </div>
 </div> -->
 <div id="comments-outer-container" class="col-sm-8 col-12">
-    <form id="new-comment-outer-container" class="row" #newCommentForm="ngForm">
-        <div id="new-comment-user-metadata" class="col-12 form-group">
-          <label class="col-12" for="new-comment-username">Nombre de usuario: 
-          <input type="text" [(ngModel)]="newComment.userName" name="new-comment-username" id="new-comment-username" class="form-control col-xs-12 col-md-5" placeholder="Nombre">
-        </label>
-          <label class="col-12" for="new-comment-useremail">Nombre de usuario: 
-          <input type="text" [(ngModel)]="newComment.userEmail" name="new-comment-useremail" id="new-comment-useremail" class="form-control col-xs-12 col-md-5"
-            placeholder="Correo">
-          </label>
-  
-  
+  <form id="new-comment-outer-container" class="row" #newCommentForm="ngForm">
+    <div id="new-comment-form-group-container">
+      <div fxLayout="row" id="new-comment-user-metadata" class="col-12 form-group">
+        <input type="text" [(ngModel)]="newComment.userName" name="new-comment-username" id="new-comment-username"
+          class="form-control col-12 col-sm-4" placeholder="Nombre">
+        <input type="text" [(ngModel)]="newComment.userEmail" name="new-comment-useremail" id="new-comment-useremail"
+          class="form-control col-12 col-sm-4" placeholder="EMAIL" translate>
+      </div>
+      <div class="new-comment-body-container col-xs-12 col-md-12">
+        <textarea type="text" [(ngModel)]="newComment.body" name="body" id="new-comment-body" class="col-12 form-control"
+          #body="ngModel" required rows="10" cols="35"></textarea>
+        <div [hidden]="body.valid" class="alert alert-danger" translate="yes">
+          BODY_MSG_ERROR
         </div>
-        <div class="new-comment-body-container col-xs-12 col-md-12">
-        <label class="col-12" for="new-comment-body">Comentario
-       
-        </label>
-        <textarea type="text" [(ngModel)]="newComment.body" name="body" id="new-comment-body" class="col-12 form-control" 
-        #body="ngModel" required rows="10" cols="35"></textarea>
-        <div [hidden]="body.valid" class="alert alert-danger">
-            Body is required
-          </div>
-        </div>
-          <button type="submit" class="btn btn-success" 
-            id="new-comment-post-btn" (click)="postNewComment(); newCommentForm.reset()" [disabled] = "!newCommentForm.form.valid">Comentar!</button>
-      </form>
+      </div>
+      <button type="submit" class="btn btn-success" id="new-comment-post-btn" (click)="postNewComment(); newCommentForm.reset()"
+        [disabled]="!newCommentForm.form.valid">Comentar!</button>
+    </div>
+  </form>
   <mat-card class="comment-container" *ngFor="let comment of commentsToRender">
     <mat-card-content class="comment-body">{{comment.body}}</mat-card-content>
     <mat-card-footer class="comment-details">
@@ -37,6 +31,6 @@
     </mat-card-footer>
   </mat-card>
   <div id="more-comments-btn-container" [ngClass]="{'hide-more-btn': endOfComments}">
-      <button class="btn" (click)="loadMoreComments()" translate>SEE_MORE</button>
-    </div>
+    <button class="btn" (click)="loadMoreComments()" translate="yes">SEE_MORE</button>
+  </div>
 </div>
