--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -40,6 +40,8 @@ $article-tag-bColor: #32A9E1;
 
     #related-articles-header {
       font-size: 3em;
+      text-align: center;
+      font-weight: 700;
     }
 
     #related-articles-cards-container{
@@ -53,6 +55,7 @@ $article-tag-bColor: #32A9E1;
       #comments-header{
           font-size: 3em;
           text-align: center;
+          font-weight: 700;
       }
   }
 }
