Implement the cookie service and more
Add a component in the Home so the user accepts the cookies
Add translation for the new components
Remove the functionalities for setting the cookies through the translate-wrapper.service

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -21,4 +21,8 @@
 
     <hav-outstanding-gallery></hav-outstanding-gallery>
   </section>
+  <div id="accept-cookies" (click)="acceptCookies()">
+      <span id="cookie-accept-text" translate>COOKIE_ACCEPT_TEXT</span>
+      <!-- <button class="btn" id="accept-cookies-btn" translate>ACCEPT</button> -->
+  </div>
 </main>
