IMplement functionality to check for the accepted cookie
With this we'll only show the cookie's component if the user has not
accepted them yet

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -21,7 +21,7 @@
 
     <hav-outstanding-gallery></hav-outstanding-gallery>
   </section>
-  <div id="accept-cookies" (click)="acceptCookies()">
+  <div id="accept-cookies" (click)="acceptCookies()" *ngIf="!hideCookieBanner()">
       <span id="cookie-accept-text" translate>COOKIE_ACCEPT_TEXT</span>
       <!-- <button class="btn" id="accept-cookies-btn" translate>ACCEPT</button> -->
   </div>
