Improve the way we load more articles
- Now we always make a request to the server to get more articles and add them
in the array we use to render them
- If the user modify the tags, then we make a whole request and modify
the entirely view.

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -43,7 +43,7 @@
     </section>
   </article>
 <div id="more-articles-btn-container" [ngClass]="{'hide-more-btn': isEndOfPage}">
-  <button class="btn" (click)="includeMoreArticles()" translate="">SEE_MORE</button>
+  <button class="btn" (click)="loadMoreArticles()" translate="">SEE_MORE</button>
 </div>
 
 <!-- <hav-outstanding-experiences></hav-outstanding-experiences> TODo: use this compoenent, but can't be imported in this module and the homeModule... -->
