--- a/apps/havana500-webclient/src/app/core/scss/partials/_hav500.scss
+++ b/apps/havana500-webclient/src/app/core/scss/partials/_hav500.scss
@@ -30,8 +30,8 @@ h4 {
 
 p {
   text-align: justify;
-  font-size: 1.62em;
-  line-height: 16px;
+  // font-size: 1.62em;
+  // line-height: 16px;
   font-weight: 300;
 }
 
