--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -11,11 +11,18 @@ $article-tag-bColor: #32A9E1;
   font-weight: 700;
 }
 
+#article-body img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 0.2px solid black;
+  }
+
 #article-outer-container {
-  margin-top: 100px;
+  margin-top: 50px;
 
   #article-title {
     margin-bottom: 20px;
+    margin-top: 30px;
     font-size: 4em;
     text-align: center;
 
@@ -29,6 +36,12 @@ $article-tag-bColor: #32A9E1;
   #article-body {
     margin-bottom: 50px;
     font-size: 1.8em;
+
+    p img {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border: 0.2px solid black;
+    }
   }
 
 
