--- a/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
@@ -89,4 +89,9 @@
     padding: 3rem;
     padding-top: 0;
   }
+  text-align: justify;
+  font-size: 1.62em;
+  line-height: 16px;
+  font-weight: 300;
+  overflow: hidden;
 }
